--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.21.0",
     "@gsap/react": "^2.1.2",
     "@tabler/icons-react": "^3.33.0",
     "@tailwindcss/vite": "^4.1.7",
+    "cloudinary": "^2.6.1",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
     "i18next": "^25.2.1",
