--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.2",
+    "react-router": "^7.6.1",
     "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss": "^4.1.7"
   },
