load of changes

--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "analyzer": "vite build --mode analyze"
   },
   "dependencies": {
     "@cloudinary/react": "^1.14.3",
     "@cloudinary/url-gen": "^1.21.0",
     "@gsap/react": "^2.1.2",
-    "@tabler/icons-react": "^3.33.0",
     "@tailwindcss/vite": "^4.1.7",
     "cloudinary": "^2.6.1",
     "clsx": "^2.1.1",
@@ -35,6 +35,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "lucide-react": "^0.525.0",
+    "rollup-plugin-visualizer": "^6.0.3",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
